--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <h1> HELLO WORLD </h1>
+  <p> I am going to make a coffee while you download the damn theme and upload it here ok? </p?
 <body>
   <script src="js/scripts.js"></script>
 </body>
